--- a/styles.css
+++ b/styles.css
@@ -17,11 +17,18 @@
   color: #f7cf31;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   height: 100vh;
   background: #f7cf31;
   overflow-x: hidden;
-  scroll-behavior: auto;
 }
 
 nav {
@@ -149,113 +156,87 @@ header #hero #fancy-hero-shape {
 main {
   width: 100%;
   height: auto;
-  padding: 20px;
 }
-main h2#title {
-  font-size: 32px;
-  text-align: center;
-  text-transform: uppercase;
+main #title {
+  font-size: clamp(22px, 4vw, 42px);
 }
-main #advantages-part {
+main #branches {
   width: inherit;
+  height: 80vh;
+  text-align: center;
 }
-main #advantages-part #advanteges-container {
+main #branches .branch-cont {
   width: inherit;
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-  padding-top: 50px;
+  align-items: center;
+  text-align: center;
 }
-main #advantages-part #advanteges-container #contents {
-  border: 1px solid #000;
+main #branches .branch-cont #branch {
+  width: 500px;
+  height: 400px;
   border-radius: 16px;
-  width: 440px;
-  height: 200px;
+  background-image: url(https://i.pinimg.com/originals/40/c6/2d/40c62dd50fb7178df00b94142b99922a.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
   margin: 10px;
-  padding: 12px;
-  display: inherit;
-  transition: 0.3s all cubic-bezier(0.075, 0.82, 0.165, 1);
+  position: relative;
   scale: 0.9;
 }
-main #advantages-part #advanteges-container #contents:hover {
+main #branches .branch-cont #branch:hover {
   scale: 1;
-  color: #fff;
 }
-main #advantages-part #advanteges-container #contents #contents:nth-child(1):hover {
-  background: linear-gradient(70.8deg, rgb(253, 70, 90) 24%, rgb(31, 42, 147) 92.4%);
-}
-main #advantages-part #advanteges-container #contents #contents:nth-child(2):hover {
-  background: radial-gradient(circle at 10% 20%, rgb(255, 131, 61) 0%, rgb(249, 183, 23) 90%);
-}
-main #advantages-part #advanteges-container #contents #contents:nth-child(3):hover {
-  background: linear-gradient(109.6deg, rgb(5, 85, 84) 11.2%, rgb(64, 224, 208) 91.1%);
-}
-main #advantages-part #advanteges-container #contents #contents:hover:nth-child(4) {
-  background: radial-gradient(circle at 10% 20%, rgb(99, 55, 255) 0%, rgb(39, 170, 255) 90%);
-}
-main #advantages-part #advanteges-container #contents img {
-  width: 200px;
-}
-main #advantages-part #advanteges-container #contents #info-ad {
-  padding: 10px;
-  position: relative;
-}
-main #advantages-part #advanteges-container #contents #info-ad .rigt-dot {
+main #branches .branch-cont #branch button {
   position: absolute;
-  padding: 12px;
-  border: 1px solid #000;
-  border-radius: 50%;
-  top: 0;
-  right: 0;
-}
-main #teachers-part {
-  padding: 50px 10px;
-}
-main #teachers-part #container-of-tr {
-  display: flex;
-  justify-content: center;
-  padding-top: 90px;
-  display: flex;
-}
-main #teachers-part #container-of-tr #teachers {
-  color: #fff;
-  background-color: #800503;
-  width: 500px;
-  height: 530px;
-  text-align: center;
-  border-radius: 17px;
-}
-main #teachers-part #container-of-tr #teachers img {
-  position: relative;
-  top: -60px;
-  border-radius: 24px;
-  width: 460px;
-}
-main #teachers-part #container-of-tr #teachers h2 {
-  font-size: 32px;
-}
-main #teachers-part #container-of-tr #teachers p {
-  margin: 10px;
-}
-main #teachers-part #container-of-tr #teachers a {
-  text-decoration: none;
-  color: #fff;
-  padding: 10px 20px;
-  background: linear-gradient(302deg, rgb(255, 89, 0) 0%, rgb(254, 229, 116) 100%);
-  font-size: 22px;
-  font-weight: 700;
-  position: relative;
-  top: 30px;
-  border-radius: 22px;
+  right: 27px;
+  bottom: 27px;
+  padding: 22px;
 }
 main #contact {
+  flex-wrap: wrap;
   width: inherit;
-  height: 100vh;
+  height: 80vh;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background: url(assets/main/contact/contact-bg.png);
+}
+main #contact .info h1 {
+  font-size: clamp(23px, 3vw, 44px);
+  color: #fff;
+}
+main #contact form {
+  border-radius: 18px;
+  background-color: #ffffff;
+  width: 400px;
+  height: 300px;
+  padding: 17px;
+  display: flex;
+  flex-direction: column;
+}
+main #contact form * {
+  margin: 11px;
+  padding: 12px;
+}
+main #contact form input {
+  outline: none;
+  border: none;
+  border-bottom: 1.7px solid #f7cf31;
+}
+main #contact form button {
+  border: none;
+  border-radius: 12px;
+  color: #fff;
+  font-weight: 600;
+  background: linear-gradient(90deg, rgb(255, 89, 0) 0%, rgb(255, 209, 0) 100%);
 }
 
 @media screen and (max-width: 660px) {
   nav {
     padding: 0;
+  }
+  nav #nav-res.active {
+    left: 0; /* Show the menu */
   }
   nav #nav-res {
     -webkit-backdrop-filter: blur(10px);
@@ -300,14 +281,5 @@ main #contact {
   }
   header #hero #fancy-hero-shape img {
     width: inherit;
-  }
-  main #advantages-part #advanteges-container {
-    flex-wrap: nowrap;
-    overflow: scroll;
-  }
-  main #advantages-part #advanteges-container #contents {
-    width: 400px;
-    height: auto;
-    flex-direction: column;
   }
 }/*# sourceMappingURL=styles.css.map */
