--- a/styles.scss
+++ b/styles.scss
@@ -10,14 +10,20 @@
   background-color: #fff;
   color: #f7cf31;
 }
+::-webkit-scrollbar{
+  width: 10px;
+}
+
 $backhground-primary-clr: #f7cf31;
 $primary-txt-clr: #d8d9db;
 $secondary-txt-clr: #000000cb;
+html{
+  scroll-behavior: smooth;
+}
 body {
   height: 100vh;
   background: $backhground-primary-clr;
   overflow-x: hidden;
-  scroll-behavior: auto;
 }
 nav {
   z-index: 110;
@@ -165,215 +171,149 @@ header {
   }
 }
 
-main {
+main{
   width: 100%;
   height: auto;
-  padding: 20px;
-
-  h2#title {
-    font-size: 32px;
-    text-align: center;
-    text-transform: uppercase;
+  #title{
+    font-size: clamp(22px, 4vw, 42px);
   }
-  #advantages-part {
+  #branches{
     width: inherit;
-    #advanteges-container {
+    height: 80vh;
+    text-align: center;
+    .branch-cont{
       width: inherit;
       display: flex;
-      flex-wrap: wrap;
       justify-content: center;
-      padding-top: 50px;
-      #contents {
-        border: 1px solid #000;
-        border-radius: 16px;
-        width: 440px;
-        height: 200px;
-        margin: 10px;
-        padding: 12px;
-        display: inherit;
-        transition: 0.3s all cubic-bezier(0.075, 0.82, 0.165, 1);
-        scale: 0.9;
-        &:hover {
-          scale: 1;
-          color: #fff;
-        }
-        #contents:nth-child(1):hover {
-          background: linear-gradient(
-            70.8deg,
-            rgb(253, 70, 90) 24%,
-            rgb(31, 42, 147) 92.4%
-          );
-        }
-        #contents:nth-child(2):hover {
-          background: radial-gradient(
-            circle at 10% 20%,
-            rgb(255, 131, 61) 0%,
-            rgb(249, 183, 23) 90%
-          );
-        }
-        #contents:nth-child(3):hover {
-          background: linear-gradient(
-            109.6deg,
-            rgb(5, 85, 84) 11.2%,
-            rgb(64, 224, 208) 91.1%
-          );
-        }
-        #contents:hover:nth-child(4) {
-          background: radial-gradient(
-            circle at 10% 20%,
-            rgb(99, 55, 255) 0%,
-            rgb(39, 170, 255) 90%
-          );
-        }
-
-        img {
-          width: 200px;
-        }
-        #info-ad {
-          padding: 10px;
-          position: relative;
-          .rigt-dot {
-            position: absolute;
-            padding: 12px;
-            border: 1px solid #000;
-            border-radius: 50%;
-            top: 0;
-            right: 0;
-          }
-        }
-      }
-    }
-  }
-
-  #teachers-part {
-    padding: 50px 10px;
-
-    #container-of-tr {
-      display: flex;
-      justify-content: center;
-      padding-top: 90px;
-      display: flex;
-
-      #teachers {
-        color: #fff;
-        background-color: #800503;
+      align-items: center;
+      text-align: center;
+      #branch{
         width: 500px;
-        height: 530px;
-        text-align: center;
-        border-radius: 17px;
-        img {
-          position: relative;
-          top: -60px;
-          border-radius: 24px;
-          width: 460px;
+        height: 400px;
+        border-radius: 16px;       
+        background-image: url(https://i.pinimg.com/originals/40/c6/2d/40c62dd50fb7178df00b94142b99922a.jpg); 
+        background-repeat: no-repeat;
+        background-size: cover;
+        margin: 10px;
+        position: relative;
+        scale: 0.9;
+        &:hover{
+          scale: 1.0;
         }
-        h2 {
-          font-size: 32px;
-        }
-        p {
-          margin: 10px;
-        }
-        a {
-          text-decoration: none;
-          color: #fff;
-          padding: 10px 20px;
-          background: linear-gradient(
-            302deg,
-            rgba(255, 89, 0, 1) 0%,
-            rgba(254, 229, 116, 1) 100%
-          );
-          font-size: 22px;
-          font-weight: 700;
-          position: relative;
-          top: 30px;
-          border-radius: 22px;
+        button{
+          position: absolute;
+          right: 27px;
+          bottom: 27px;
+          padding: 22px;
+          
         }
       }
     }
   }
   #contact{
+    flex-wrap: wrap;
     width: inherit;
-    height: 100vh;
-
-  }
-}
-
-
-
-
-
-@media screen and (max-width: 660px) {
-  nav {
-    padding: 0;
-
-    #nav-res {
-      backdrop-filter: blur(10px);
-      transition: 0.2s all ease-in;
-      position: fixed;
-      top: 0;
-      left: -100%;
-      padding-top: 100px;
+    height: 80vh;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background: url(assets/main/contact/contact-bg.png);
+    .info{
+      h1{
+        font-size: clamp(23px, 3vw, 44px);
+        color: #fff;
+      }
+    }
+    form{
+      border-radius: 18px;
+      background-color: #ffffff;
+      width: 400px;
+      height: 300px;
+      padding: 17px;
+      display: flex;
       flex-direction: column;
-      align-items: center;
-      width: 100%;
-      height: 100%;
-      z-index: 110;
-
-      &.active {
-        left: 0; // Slide in the menu when active
+      *{
+        margin: 11px;
+        padding: 12px;
       }
-
-      li {
-        width: 90%;
-        margin: 5px;
-        padding: 20px;
-        border-radius: 20px;
-        background-color: #ffffff81;
-        box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
-          rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-          rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-        text-align: center;
-
-        a {
-          padding: 0;
-          color: #fff;
-        }
+      input{
+        outline: none;
+        border: none;
+        border-bottom: 1.7px solid #f7cf31;
       }
-    }
-
-    #menu {
-      display: block;
-      z-index: 130;
-    }
-  }
-
-  header {
-    flex-direction: column;
-
-    #hero {
-      #fancy-hero-shape {
-        width: 300px;
-        height: 300px;
-
-        img {
-          width: inherit;
-        }
-      }
-    }
-  }
-
-  main {
-    #advantages-part {
-      #advanteges-container {
-        
-        flex-wrap: nowrap;
-        overflow: scroll;
-        #contents{
-          width: 400px;
-          height: auto;
-          flex-direction: column;
-        }
+      button{
+        border: none;
+        border-radius: 12px;
+        color: #fff;
+        font-weight: 600;
+        background: linear-gradient(90deg, rgba(255,89,0,1) 0%, rgba(255,209,0,1) 100%);
       }
     }
   }
 }
+
+
+  @media screen and (max-width: 660px) {
+    nav {
+      padding: 0;
+      #nav-res.active {
+        left: 0; /* Show the menu */
+      }
+      #nav-res {
+        backdrop-filter: blur(10px);
+        transition: 0.2s all ease-in;
+        position: fixed;
+        top: 0;
+        left: -100%;
+        padding-top: 100px;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        z-index: 110;
+
+        &.active {
+          left: 0; // Slide in the menu when active
+        }
+
+        li {
+          width: 90%;
+          margin: 5px;
+          padding: 20px;
+          border-radius: 20px;
+          background-color: #ffffff81;
+          box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
+            rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+            rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+          text-align: center;
+
+          a {
+            padding: 0;
+            color: #fff;
+          }
+        }
+      }
+
+      #menu {
+        display: block;
+        z-index: 130;
+      }
+    }
+
+    header {
+      flex-direction: column;
+
+      #hero {
+        #fancy-hero-shape {
+          width: 300px;
+          height: 300px;
+
+          img {
+            width: inherit;
+          }
+        }
+      }
+    }
+
+   
+  }
